k8s/besu-qbft/firefly/deployment.yaml
# SPDX-FileCopyrightText: 2025 Daniel Sampliner <samplinerD@gmail.com>
#
# SPDX-License-Identifier: GLWTPL

apiVersion: apps/v1
kind: Deployment
metadata:
  name: signer
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: signer
          image: ghcr.io/hyperledger/firefly-signer:v1.1.22
          imagePullPolicy: IfNotPresent
          command:
            - /usr/bin/ffsigner
            - --config
            - /opt/config.yaml
          ports:
            - containerPort: 8545
              name: json-rpc
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 2048Mi
          volumeMounts:
            - name: config
              mountPath: /opt
              readOnly: true
            - name: keystore
              mountPath: /data/keystore
              readOnly: true

      volumes:
        - name: config
          configMap:
            name: signer
        - name: keystore
          projected:
            sources:
              - secret:
                  name: signer
