k8s/besu-qbft/firefly/statefulset.yaml
# SPDX-FileCopyrightText: 2025 Daniel Sampliner <samplinerD@gmail.com>
#
# SPDX-License-Identifier: GLWTPL

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: signer
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: signer
          image: ghcr.io/hyperledger/firefly-signer:v1.1.22
          imagePullPolicy: IfNotPresent
          command:
            - bash
            - -xeuc
            - |
                POD_NUM=${POD_NAME##*-}
                cat /config/config.yaml - <<-EOF | tee /tmp/config.yaml
                backend:
                  url: http://node-${POD_NUM:?}.besu-qbft.svc.cluster.local:8545
                EOF

                exec ffsigner --config /tmp/config.yaml

          ports:
            - containerPort: 8545
              name: json-rpc
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 2048Mi
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: keystore
              mountPath: /data/keystore
              readOnly: true
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: config
          configMap:
            name: signer
        - name: keystore
          projected:
            sources:
              - secret:
                  name: signer
        - name: tmp
          emptyDir:
            sizeLimit: 1Mi
